--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <h1>Coxeter Complex Generator</h1>
 <div class="row">
 <div class="column">
-<form action="index_submit" method="get" accept-charset="utf-8">
+<form action="javascript:generateCoxeterComplex();">
     <label for="mst">\(m(s,t)\)</label><br>
-    <input type="text" id="mst" name="mst"><input type="checkbox" id="mstinf"><label for="mstinf">&infin;</label><br><br>
+    <input class="mst" type="text" id="mst" name="mst" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="mstinf" onchange="toggleInput(this,'mst');"><label for="mstinf">&infin;</label><br><br>
     <label for="msu">\(m(s,u)\)</label><br>
-    <input type="text" id="msu" name="msu"><input type="checkbox" id="msuinf"><label for="msuinf">&infin;</label><br><br>
+    <input class="mst" type="text" id="msu" name="msu" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="msuinf" onchange="toggleInput(this,'msu');"><label for="msuinf">&infin;</label><br><br>
     <label for="mst">\(m(t,u)\)</label><br>
-    <input type="text" id="mtu" name="mtu"><input type="checkbox" id="mtuinf"><label for="mtuinf">&infin;</label><br><br><br>
-    <button type="button" onclick="generateCoxeterComplex()">Generate Coxeter Complex</button>
+    <input class="mst" type="text" id="mtu" name="mtu" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="mtuinf" onchange="toggleInput(this,'mtu');"><label for="mtuinf">&infin;</label><br><br><br>
+    <button type="submit">Generate Coxeter Complex</button>
     <button type="button" onclick="clearPage()">Clear</button>
 </div>
 <div class="column">
