--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
+<body onload="onLoad();">
+
 <h1>Coxeter Complex Generator</h1>
+
 <div class="row">
 <div class="column">
 <form action="javascript:generateCoxeterComplex();">
+
     <label for="mst">\(m(s,t)\)</label><br>
-    <input class="mst" type="text" id="mst" name="mst" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="mstinf" onchange="toggleInput(this,'mst');"><label for="mstinf">&infin;</label><br><br>
+    <input class="mst" id="mst"><input class="mstinf" id="mstinf" linkedmst="mst">
+    <label for="mstinf">&infin;</label><br><br>
+
     <label for="msu">\(m(s,u)\)</label><br>
-    <input class="mst" type="text" id="msu" name="msu" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="msuinf" onchange="toggleInput(this,'msu');"><label for="msuinf">&infin;</label><br><br>
+    <input class="mst" id="msu"><input class="mstinf" id="msuinf" linkedmst="msu">
+    <label for="msuinf">&infin;</label><br><br>
+
     <label for="mst">\(m(t,u)\)</label><br>
-    <input class="mst" type="text" id="mtu" name="mtu" value="2" required pattern="^0*(1[0-9]+|[2-9]+)$" oninvalid="alert('Please enter an integer greater than or equal to 2.');"><input type="checkbox" id="mtuinf" onchange="toggleInput(this,'mtu');"><label for="mtuinf">&infin;</label><br><br><br>
+    <input class="mst" id="mtu"><input class="mstinf" id="mtuinf" linkedmst="mtu">
+    <label for="mtuinf">&infin;</label><br><br><br>
+
     <button type="submit">Generate Coxeter Complex</button>
     <button type="button" onclick="clearPage()">Clear</button>
 </div>
+
 <div class="column">
     <p id="output">The Coxeter Complex will be displayed here.</p>
 </div>
 </div>
 </form>
+
+</body>
 </html>
