added svg and download

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
     <button type="submit">Generate Coxeter Complex</button>
     <button type="button" onclick="clearPage()">Clear</button>
+    <a id="download" download>Download</a>
 </div>
 
 <div class="column">
-    <p id="output">The Coxeter Complex will be displayed here.</p>
+    <svg id="output" width="500" height="500">
+    </svg>
 </div>
 </div>
 </form>
